--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.3
 django-cors-headers==3.10.1
 djangorestframework==3.12.2
 Faker==4.14.2
+Pillow==8.4.0
 python-dateutil==2.8.1
 pytz==2020.4
 six==1.15.0
