--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.3.1
+defusedxml==0.7.1
 Django==3.1.3
 django-cors-headers==3.10.1
 django-redis==5.1.0
 djangorestframework==3.12.2
+djangorestframework-xml==2.0.0
 Faker==4.14.2
 Pillow==8.4.0
 python-dateutil==2.8.1
