--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.1
 defusedxml==0.7.1
 Django==3.1.3
+django-admin-honeypot==1.1.0
 django-cors-headers==3.10.1
 django-redis==5.1.0
 djangorestframework==3.12.2
